<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Usuario.LogeoActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="217dp"
        android:layout_height="101dp"
        android:contentDescription="@string/Imagen"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        app:srcCompat="@drawable/logoinacap" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="377dp"
        android:layout_height="169dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#FAEDED"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Correo"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#504242"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#504242" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Logeo"
                android:shadowColor="#B37272"
                android:text="@string/Logeo"
                app:rippleColor="#C34141"
                app:strokeColor="#000000"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="362dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Register"
        android:text="@string/Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />
</androidx.constraintlayout.widget.ConstraintLayout>